--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 :root {
-    --color1: #f2eabc;
-    --color2: #54736e;
-    --color3: #194756;
-    --color4: #194756;
-    --color5: #ff3b58;
+    --color1: #44749d;
+    --color2: #c6d4e1;
+    --color3: #ffffff;
 }
