--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
+    background-color: var(--color3);
 }
 
 .menu{
-    border: 1px solid red;
     display: flex;
     justify-content: center;
     align-items: center;
+  
 }
