--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -3,4 +3,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 55vw;
+}
+
+@media screen and (max-width: 786px){
+    .homeContainer{
+        
+        width: 100vw;
+    }
 }
