--- a/src/components/pages/home/presentacion/Presentacion.css
+++ b/src/components/pages/home/presentacion/Presentacion.css
@@ -1,16 +1,25 @@
-
+.presentacionContainer{
+    width: 100%;
+    height: 82vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+    
 }
 
 .presentation-section {
     background-color: var(--color3);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     margin: 50px 0;
     overflow: hidden;
-    border-radius: 5px;
+    padding: 20px;
 }
 
 .intro {
