--- a/src/components/pages/home/presentacion/Presentacion.css
+++ b/src/components/pages/home/presentacion/Presentacion.css
@@ -1,9 +1,10 @@
 .presentacionContainer{
     width: 100%;
-    height: 82vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 20vh;
 }
 .container {
     max-width: 800px;
