--- a/src/components/pages/home/dropdown/DropdownComponent.css
+++ b/src/components/pages/home/dropdown/DropdownComponent.css
@@ -3,11 +3,20 @@
     position: fixed;
     right: 0;
     bottom: 0;
-    background-color: var(--color2);
+    background-color: var(--color4);
     box-shadow: 1px 5px 18px 8px black;
     border-radius: 5px;
 }
 
 .dropdown-menu{
     box-shadow: 1px 0px 20px 1px black;
+    background-color: var(--color4);
+}
+
+.btn.dropdown-toggle{
+    color: var(--color3);
+}
+.dropdown-item{
+    color: var(--color3);
+
 }
