--- a/src/components/pages/home/skills/Skills.css
+++ b/src/components/pages/home/skills/Skills.css
@@ -1,6 +1,7 @@
 .skill--img{
     width: 90px;
     transition: 0.1s ease all;
+    
 }
 
 .skill--img:hover{
@@ -8,11 +9,11 @@
 }
 
 .custom-tooltip {
-    --bs-tooltip-bg: var(--color1);
+    --bs-tooltip-bg: var(--color4);
     --bs-tooltip-color: var(--color3);
   }
 
   .skillsContainer{
-    min-height: 100vh;
-    margin: 100px;
+   padding: 20px;
+   margin-bottom: 50px;
   }
