--- a/src/components/pages/projects/projectsList/ProjectList.css
+++ b/src/components/pages/projects/projectsList/ProjectList.css
@@ -6,7 +6,6 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
-    margin: 20px;
 }
 
 .item_button{
@@ -24,15 +23,30 @@
     padding: 10px;
     display: flex;
     justify-content: flex-end;
-    width: 100vw;
+    min-height: 100px;
 }
-.list-group-item{
+.toolListContainer{
+    width: 40%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.list-groupItems{
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    padding: 0;
+}
+.list-group-itemTool{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--color1);
+    border: 1px solid var(--color1);
+    border-radius: 8px;
+    padding: 8px;
+    min-width: 40%;
+    background-color: var(--color4);
     color: var(--color3);
-    margin-right: 20px;
 }
 
 .btnDeleteTool{
@@ -42,7 +56,32 @@
     border: 1px solid var(--color2);
     margin-left: 15px;
 }
-.dropDowmTools{
-    position: absolute;
-    left: 20%;
+.dropdownListToolsContainer{
+    width: 100vw;
+    margin-left: 50px;
+}
+.btnToolsList{
+    background-color: var(--color4);
+}
+
+@media screen and (max-width: 786px) {
+    .toolsListSelected{
+        width: 100%;
+    }
+    .dropDowmTools{
+        left: 0%;
+        top: 15vh;
+    }
+    .proyectListContainer{
+        width: 100%;
+        min-height: 0vh;
+    }
+
+    .toolListContainer{
+        width: 100%;
+    }
+    .dropDowmTools{
+        position: static
+        
+    }
 }
