--- a/src/components/pages/projects/projectsList/projectCard/ProjectCard.css
+++ b/src/components/pages/projects/projectsList/projectCard/ProjectCard.css
@@ -9,4 +9,21 @@
 .link--project{
     width: 40%;
     color: var(--color1);
+    text-decoration: none;
+}
+.link--project:hover{
+    transform: scale(1.1);
+}
+.toolsContainer{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    width: 100%;
+    
+}
+.cardBodyContainer{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    min-height: 80px;
 }
