--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -51,10 +51,11 @@ li{
     width: 200px;
 }   
 .iconMode{
-    height: 60px;
+    height: 40px;
+    transition: 1s ease all;
 }
 .iconMode:hover{
-    transform: scale(1.1);
+    transform: scale(1.1) rotate(90deg);
     cursor: pointer;
 }
 
@@ -65,8 +66,6 @@ li{
 }
 @media screen and (max-width: 760px) {
     .logo-text{
-        color: var(--color3);
-        font-size: 1.2rem;
-        opacity: 0;
+        font-size: 1.1rem;
     }
 }
