--- a/src/components/pages/projects/projectsList/projectCard/ProjectCard.css
+++ b/src/components/pages/projects/projectsList/projectCard/ProjectCard.css
@@ -5,13 +5,26 @@
 
 .links--container{
     display: flex;
-    justify-content: space-around;
+    gap: 10px;
+    flex-wrap: wrap;
+
+}
+.card-responsive_fullstack{
+    color: rgb(3, 180, 3);
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    align-items: center;
+}
+.card_fullstack{
+    height: 70px;
 }
 .link--project{
     width: 40%;
     color: var(--color1);
     text-decoration: none;
     transition: ease all 0.3s;
+    
 }
 .link--project:hover{
     transform: scale(1.1);
